# opensky-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic_query.rs
src/: cache.rs  config.rs  lib.rs  query.rs  trino.rs  types.rs
