[package]
name = "opensky"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Rust client for OpenSky Network Trino database"
authors = ["Junzi Sun <git@junzis.com>"]
license = "MIT"
repository = "https://github.com/junzis/opensky-rs"
homepage = "https://github.com/junzis/opensky-rs"
documentation = "https://docs.rs/opensky"
readme = "README.md"
keywords = ["opensky", "aviation", "ads-b", "trino", "flight-data"]
categories = ["api-bindings", "science"]
exclude = ["*.csv", "*.parquet"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DataFrames
polars = { version = "0.46", features = ["parquet", "csv", "lazy"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
configparser = "3"

# Platform-specific directories
dirs = "6"

# Error handling
thiserror = "2"

# URL handling
url = "2"

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
cli = ["clap"]

[[bin]]
name = "opensky"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
